[Table] fix small gap while scrolling

--- a/src/components/common/Block/Block.module.css
+++ b/src/components/common/Block/Block.module.css
@@ -1,9 +1,10 @@
 .block {
   width: 100%;
+  position: relative;
+  overflow: hidden;
   background: rgba(255, 255, 255, 0.05);
   padding: 16px 0px;
   margin-top: 16px;
-  position: relative;
   box-shadow: 
     rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, 
     rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, 
