--- a/src/components/common/Table/Table.module.css
+++ b/src/components/common/Table/Table.module.css
@@ -1,5 +1,11 @@
 .container {
   overflow-x: auto;
+  position: relative;
+  width: 100%;
+  box-shadow: 
+    rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, 
+    rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, 
+    rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
 }
 
 .container::-webkit-scrollbar {
@@ -40,15 +46,14 @@ tr {
 }
 
 .head th {
-  text-align: center;
+  text-align: right;
   font-size: 12px;
   font-weight: 400;
 }
-/* 
-.head th:first-child ,
-.head th:nth-child(2) {
+
+.head th:first-child {
   text-align: center;
-} */
+}
 
 .column {
   cursor: pointer;
@@ -113,7 +118,7 @@ tr {
 .countries .align:last-child {
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 136px;
+  width: 128px;
 }
 
 .more,
